fixed year aligned properly

--- a/styles/emissions.scss
+++ b/styles/emissions.scss
@@ -81,8 +81,8 @@
 
 #line {
   position: absolute;
-  width: 659px;
-  height: 0.5px;
+  width: 100%;
+  // height: 0.5px;
   outline: 1px solid red;
   top: 98%;
 }
@@ -103,17 +103,17 @@
 #emissions-year-fixed {
   position: absolute;
   font-size: 22px;
-  right: 3px;
+  right: -1%;
   bottom: -3.5%;
 }
 
 #percent-total {
   position: absolute;
-  left: -4%;
+  left: -5%;
 }
 
 #percent-total-fixed {
   position: absolute;
-  left: -4%;
+  left: -5%;
   bottom: -2.5%;
 }
